--- a/app/views/serve/about.html.erb
+++ b/app/views/serve/about.html.erb
@@ -1,5 +1,30 @@
 <%= render :partial => 'flashes' %>
 
-about
+<div id="main">
+	
+	<%= render :partial => "main_header" %>
+
+  <div class="filterbar inner_pages">
+		
+		<div style="float:right;margin-top:5px;">VERSION: V1 (ALPHA)</div>
+		<h1>About Dotshelf</h1>
+		
+		
+		
+		<div>
+			<p class="about_texter">
+        An open-source project that find awesome domains. Dotshelf lets you enter words and it will try every combination and tell you which are available by your criterias.
+        <br><br>
+        Originally created by <a href="http://emiralp.com" target="_blank">Emir Alp</a> &amp; <a href="http://umitkit.com" target="_blank">Umit Kitapcigil</a> under <a href="http://workaxe.com" target="_blank">workaxe</a>.
+        <br><br>
+        You can fork original <a href="#" target="_blank" onclick="alert('todo')">source here</a>.
+      </p>
+      
+		</div>
+		
+  </div>
+
+	
+</div>
 
 <%= render :partial => 'footer' %>
