--- a/app/views/serve/_home.html.erb
+++ b/app/views/serve/_home.html.erb
@@ -1,3 +1,15 @@
+<div id="m_curtain">
+  <div class="m_logo_holder">
+		<div class="logo_holder" style="display:none;">
+			<div class="dotshelf_logo">
+				<div class="circle"></div>
+				<div class="triangle"></div>
+			</div>
+			<img src="/assets/only_text_logo.png" width="230" height="60" alt="dotshelf | genius domain search tool">
+		</div>
+  </div>
+</div>
+
 <div id="home">
 	<div class="home_logo no_select">
 		
