--- a/app/views/serve/about.html.erb
+++ b/app/views/serve/about.html.erb
@@ -21,6 +21,51 @@
       </p>
       
 		</div>
+    
+    
+    <div style="margin-top:30px;">
+    
+      <h1>How it works?</h1>
+    
+      <ol style="margin-top:30px;">
+        <li>
+          
+          <h4>Focus on keywords!</h4><br>
+
+          <h6>Write some words to Keywords input on main page:</h6><br>
+          <img src="/about_images/about_1.png" style="border:3px solid #67C5AE;width:70%;">
+          <br><br><br>
+        </li>
+        <li>  
+          <h4>Pick related keywords!</h4><br>
+          <h6>Click any keyword:</h6><br>
+          <img src="/about_images/about_click_tip.png" style="border:3px solid #67C5AE;width:70%;"><br><br>
+          <h6>And select new keywords from list:</h6><br>
+          <img src="/about_images/about_click_tip_detail.png" style="border:3px solid #67C5AE;width:60%;"><br><br><br>
+        
+        </li>
+        
+        <li>  
+          <h4>Define domain categories!</h4><br>
+          <h6>Select some categories related to your domain:</h6><br>
+          
+      
+          <img src="/about_images/about_2.png" style="border:3px solid #67C5AE;width:70%;"><br><br><br>
+        
+        </li>
+        
+        <li>  
+          <h4>Ready!</h4><br>
+          <h6>Start exploring available domains:</h6><br>
+          
+      
+          <img src="/about_images/about_3.jpg" style="border:3px solid #67C5AE;width:70%;"><br><br><br>
+          
+        </li>
+      </ol>
+      
+      
+    </div>
 		
   </div>
 
