--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>dotshelf</title>
+  <title>dotshelf - Find awesome domains</title>
   
   <link rel="apple-touch-icon" sizes="57x57" href="/favicons/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/favicons/apple-icon-60x60.png">
@@ -20,6 +20,12 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/favicons/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
+  
+  <meta property="og:title" content="dotshelf - Find awesome domains"/>
+  <meta property="og:image" content="/dotshelf_logo.png"/>
+  <meta property="og:site_name" content="dotshelf"/>
+  <meta property="og:description" content="Find unique and available domains with this open-source project!"/>
+  
   
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
