--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
   <meta name="theme-color" content="#ffffff">
   
   <meta property="og:title" content="dotshelf - Find awesome domains"/>
-  <meta property="og:image" content="/dotshelf_logo.png"/>
+  <meta property="og:image" content="<%= "#{request.protocol}#{request.host_with_port}" %>/dotshelf_logo.png"/>
   <meta property="og:site_name" content="dotshelf"/>
   <meta property="og:description" content="Find unique and available domains with this open-source project!"/>
   
