--- a/app/views/serve/about.html.erb
+++ b/app/views/serve/about.html.erb
@@ -17,7 +17,7 @@
         <br><br>
         Originally created by <a href="http://emiralp.com" target="_blank">Emir Alp</a> &amp; <a href="http://umitkit.com" target="_blank">Umit Kitapcigil</a> under <a href="http://workaxe.com" target="_blank">workaxe</a>.
         <br><br>
-        You can fork original <a href="#" target="_blank" onclick="alert('todo')">source here</a>.
+        You can fork original <a href="https://github.com/workaxe/dotshelf" target="_blank">source here</a>.
       </p>
       
 		</div>
